syntax = "proto2";
package Chat;

option java_package = "com.blitzhere.ChatMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "CM";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


//----------------------------------------------------------------------------------------
//
//                                                                             Simple Chat
//
//----------------------------------------------------------------------------------------


enum Format {
  FormatUnknown   = 0;
  FormatJSON      = 1;
  FormatProtobuf  = 2;
}


message ChatMessage {
  optional string     senderID    = 1;
  optional string     roomID      = 2;
  optional double     timestamp   = 3;
  optional string     message     = 4;
}


message ChatUser {
  optional string     userID      = 1;
  optional string     nickname    = 2;
  optional Format     format      = 3;
}


message ChatRoom {
  optional string     roomID      = 1;
  optional string     roomName    = 2;
}


message ChatConnect {
  optional bool       isConnecting      = 1;
  optional ChatUser   user              = 2;
  repeated ChatRoom   rooms             = 3;  //  <= out
}


message ChatEnterRoom {
  optional ChatUser   user            = 1;
  optional ChatRoom   room            = 2;
  optional bool       userIsEntering  = 3;
}


message ChatPresence {
  optional ChatRoom   room        = 1;
  repeated ChatUser   users       = 2;
}


enum StatusCode {
  StatusSuccess         = 1;
  StatusInputInvalid    = 2;
  StatusNotAuthorized   = 3;
  StatusServerError     = 4;
}


message ChatResponse {
  optional StatusCode       code    = 1;
  optional string           message = 2;
}


message ChatMessageType {
  optional ChatMessage      chatMessage   = 1;
  optional ChatConnect      chatConnect   = 2;
  optional ChatEnterRoom    chatEnterRoom = 3;
  optional ChatPresence     chatPresence  = 4;
  optional ChatResponse     chatResponse  = 5;
}

